虚拟机内存分配